syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

service UserGrpc {
  rpc CheckLogin (LoginRequest) returns (LoginReply);
  rpc CheckRegister (RegisterRequest) returns (RegisterReply);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  int32 user_id = 1;
  string full_name = 2;
  string email = 3;
  string role = 4;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string full_name = 3;
  string email = 4;
}

message RegisterReply {
  bool success = 1;
}
